--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>Client</title>
+  <meta charset="utf-8" >
+  <title>ALDESER</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+ 
+
+  <!--Boostrap 4 -->
+  
 </head>
 <body>
   <app-root></app-root>
